codigo/4-variables/error_variable_2.out
  File "<stdin>", line 1
    123variable = 'hola'
       ^
SyntaxError: invalid syntax